--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "proxy": "https://jaliscomls.com",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -18,6 +18,8 @@
     "bootstrap": "5.1.3",
     "eslint": "8.42.0",
     "eslint-config-next": "^13.5.4",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "next": "^13.5.4",
     "photoswipe": "^5.3.8",
     "prop-types": "15.6.0",
